@@ -129,6 +129,8 @@
     * FIX: Removed duplicate url parameters e.g. in dashboard (display_options)
     * FIX: Dashboard: If original request showed no "max rows"-message, the
            page rendered during reload does not show the message anymore
+    * FIX: Fixed bug in alert statistics view (only last 1000 lines were
+           processed for calculating the statistics)
 
     Livecheck:
     * FIX: Compile livecheck also if diet libc is missing
